avoiding console window by changing output type to Windows Application
as suggested in https://github.com/AvaloniaUI/Avalonia/issues/1705#issuecomment-463157103

--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFrameworks>net8.0</TargetFrameworks>
     <!--<TargetFrameworks>net7.0;net7.0-android</TargetFrameworks>-->
     <!-- net7.0-ios is not supported on Linux, so we do not add it there. -->
