--- a/Shell/Shell.csproj
+++ b/Shell/Shell.csproj
@@ -11,6 +11,7 @@
     <Authors>Holger Schmidt</Authors>
     <Copyright>Copyright © Holger Schmidt 2020-24</Copyright>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
