added bufferedThrottle suggested in https://github.com/fabulous-dev/Fabulous/pull/1070

--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -27,6 +27,7 @@
     <DisableCodesignVerification>true</DisableCodesignVerification>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CmdExtensions.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
