extracted SearchResult into separate module

--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -28,8 +28,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Styles.fs" />
-    <Compile Include="FileOutput.fs" />
     <Compile Include="CmdExtensions.fs" />
+    <Compile Include="SearchResult.fs" />
+    <Compile Include="FileOutput.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
