extracted ResultOptions into separate MVU module

--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -31,6 +31,7 @@
     <Compile Include="CmdExtensions.fs" />
     <Compile Include="Scopes.fs" />
     <Compile Include="SearchResult.fs" />
+    <Compile Include="ResultOptions.fs" />
     <Compile Include="FileOutput.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
