--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <Compile Include="Styles.fs" />
     <Compile Include="CmdExtensions.fs" />
+    <Compile Include="Focus.fs" />
     <Compile Include="Scopes.fs" />
     <Compile Include="SearchResult.fs" />
     <Compile Include="ResultOptions.fs" />
