--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -31,6 +31,7 @@
     <Compile Include="Styles.fs" />
     <Compile Include="CmdExtensions.fs" />
     <Compile Include="Focus.fs" />
+    <Compile Include="Scope.fs" />
     <Compile Include="Scopes.fs" />
     <Compile Include="SearchResult.fs" />
     <Compile Include="ResultOptions.fs" />
