--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -33,6 +33,7 @@
     <Compile Include="Styles.fs" />
     <Compile Include="CmdExtensions.fs" />
     <Compile Include="Focus.fs" />
+    <Compile Include="ConfigFile.fs" />
     <Compile Include="Scope.fs" />
     <Compile Include="Scopes.fs" />
     <Compile Include="SearchResult.fs" />
