--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -31,6 +31,7 @@
     <AvaloniaResource Include="SubTubular.ico" />
     <Compile Include="AsyncImage.fs" />
     <Compile Include="AutoCompleteBox.fs" />
+    <Compile Include="StyledElement.fs" />
     <Compile Include="Styles.fs" />
     <Compile Include="CmdExtensions.fs" />
     <Compile Include="Focus.fs" />
