listing caches by last access time

--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -36,6 +36,7 @@
     <Compile Include="CmdExtensions.fs" />
     <Compile Include="Focus.fs" />
     <Compile Include="Services.fs" />
+    <Compile Include="Cache.fs" />
     <Compile Include="ConfigFile.fs" />
     <Compile Include="Scope.fs" />
     <Compile Include="Scopes.fs" />
