split Search into separate module

--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -47,6 +47,7 @@
     <Compile Include="ResultOptions.fs" />
     <Compile Include="FileOutput.fs" />
     <Compile Include="Settings.fs" />
+    <Compile Include="Search.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
