--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -48,6 +48,7 @@
     <Compile Include="ResultOptions.fs" />
     <Compile Include="FileOutput.fs" />
     <Compile Include="Settings.fs" />
+    <Compile Include="OutputCommand.fs" />
     <Compile Include="Search.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
