renamed Search module to OutputCommandView

--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -49,7 +49,7 @@
     <Compile Include="FileOutput.fs" />
     <Compile Include="Settings.fs" />
     <Compile Include="OutputCommand.fs" />
-    <Compile Include="Search.fs" />
+    <Compile Include="OutputCommandView.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
