--- a/Ui/Ui.fsproj
+++ b/Ui/Ui.fsproj
@@ -35,6 +35,7 @@
     <Compile Include="AsyncImage.fs" />
     <Compile Include="AutoCompleteBox.fs" />
     <Compile Include="StyledElement.fs" />
+    <Compile Include="JobSchedulerReporter.fs" />
     <Compile Include="Styles.fs" />
     <Compile Include="CmdExtensions.fs" />
     <Compile Include="Focus.fs" />
